<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.MyQrFragment">


    <TextView
        android:id="@+id/wooppay_tips_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/wooppay_tips"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/my_qr_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="-1dp"
        android:text="QR"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wooppay_tips_label" />

    <TextView
        app:layout_goneMarginStart="@dimen/default_margin"
        android:textSize="12sp"
        android:textColor="#777777"
        android:id="@+id/qr_advice_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/qr_advice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_qr_label" />

    <TextView
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:id="@+id/your_qr_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/your_personal_qr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qr_advice_text_view" />

    <ImageView
        android:layout_marginTop="@dimen/default_margin"
        android:id="@+id/your_qr_image_view"
        android:src="@drawable/qr_code_img"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_qr_label" />

    <TextView
        android:id="@+id/give_qr_advice_text_view"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/give_qr_advice"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_qr_image_view" />

    <TextView
        android:id="@+id/or_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:textColor="#777777"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/give_qr_advice_text_view" />

    <TextView
        android:id="@+id/print_qr_label"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_height="wrap_content"
        android:text="@string/print_qr_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or_text_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/get_qr_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginBottom="100dp"
        android:paddingVertical="@dimen/button_padding"
        android:text="@string/get_document"
        android:textAppearance="@style/TextAppearance.TipsApplication.ButtonTextAppearance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>